--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -7,6 +7,7 @@
     <title>Add Campground</title>
 </head>
 <body>
+    <h1>Add Campground</h1>
     <form action="/campgrounds" method="POST">
         <div>
             <label for="title">Title</label>
