--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,28 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Add Campground</title>
-</head>
-<body>
-    <h1>Add Campground</h1>
-    <form action="/campgrounds" method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" name="campground[title]" id="title" />
-            
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" name="campground[location]" id="location" />
-            
-        </div>
-        <button>Add campground</button>
-        <footer>
-            <a href="/campgrounds">All Campgrounds</a>
-        </footer>
-    </form>
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+
+<h1>Add Campground</h1>
+<form action="/campgrounds" method="POST">
+    <div>
+        <label for="title">Title</label>
+        <input type="text" name="campground[title]" id="title" />
+        
+    </div>
+    <div>
+        <label for="location">Location</label>
+        <input type="text" name="campground[location]" id="location" />
+        
+    </div>
+    <button>Add campground</button>
+    <footer>
+        <a href="/campgrounds">All Campgrounds</a>
+    </footer>
+</form>
