--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,6 +2,8 @@
 
 <h1><%= campground.title %></h1>
 <h2><%= campground.location %></h2>
+<img src="<%= campground.image  %> " alt="">
+<p><%= campground.description %> </p>
 <footer>
     <a href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
     <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
