--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,31 +3,38 @@
 <div class="row">
     <h1 class="text-center">Edit Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validatedForm">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %>" />
+                <input required class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %>" />
+                <div class="valid-feedback">Looks good!</div>
                 
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" name="campground[location]" id="location" value="<%= campground.location %>" />
+                <input required class="form-control" type="text" name="campground[location]" id="location" value="<%= campground.location %>" />
+                <div class="valid-feedback">Looks good!</div>
                 
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
-                <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %>" />
+                <input required class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %>" />
+                <div class="valid-feedback">Looks good!</div>
                 
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" name="campground[description]" id="description"> <%= campground.description %>  </textarea>
+                <textarea class="form-control" required type="text" name="campground[description]" id="description"><%= campground.description %></textarea>
+                <div class="valid-feedback">Looks good!</div>
+                
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
-                    <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" value="<%= campground.price %>">
+                    <input required type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" value="<%= campground.price %>">
+                    <div class="valid-feedback">Looks good!</div>
+                    
                 </div>
             </div>
 
