--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,31 +3,36 @@
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST">
+        <form action="/campgrounds" method="POST" novalidate class="validatedForm">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" name="campground[title]" id="title" />
+                <input class="form-control" type="text" name="campground[title]" id="title" required />
+                <div class="valid-feedback">Looks good!</div>
                 
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" name="campground[location]" id="location" />
+                <input class="form-control" type="text" name="campground[location]" id="location" required />
+                <div class="valid-feedback">Looks good!</div>
+
                 
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
-                <input class="form-control" type="text" name="campground[image]" id="image" />
-                
+                <input class="form-control" type="text" name="campground[image]" id="image" required />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" name="campground[description]" id="description"> </textarea>
+                <textarea class="form-control" type="text" required name="campground[description]" id="description"></textarea>
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
-                    <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label">
+                    <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" required>
+                    <div class="valid-feedback">Looks good!</div>
                 </div>
             </div>
 
@@ -41,3 +46,4 @@
         
     </div>
 </div>
+
