--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -24,7 +24,7 @@
           2 days ago <a href="/campgrounds">All Campgrounds</a>
         </div>
         <h2>Leave a review</h2>
-        <form action="" class="mb-3">
+        <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3">
           <div class="mb-3">
             <label for="rating" class="form-label">Rating</label>
             <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range" />
@@ -35,5 +35,11 @@
           </div>
           <button class="btn btn-success">Submit</button>
         </form>
+        <% for (let review of campground.reviews) { %> 
+        <div class="mb-3">
+          <div class="p">Rating: <%= review.rating %> </div>
+          <div class="p">Review: <%= review.body %> </div>
+        </div>
+        <% } %> 
     </div>
 </div>
