--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,8 +9,12 @@
           <a class="nav-link active" href="/">Home</a>
           <a class="nav-link" href="/campgrounds">Campgrounds</a>
           <a class="nav-link" href="/campgrounds/new">Add Campground</a>
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </div>
-      </div>
     </div>
-  </nav>
+    <div class="navbar-nav ml-auto">
+      <a class="nav-link" href="/login">Login</a>
+      <a class="nav-link" href="/register">Register</a>
+      <a class="nav-link" href="/logout">Logout</a>
+    </div>
+  </div>
+</nav>
