--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,14 +11,16 @@
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item text-muted"> <%= campground.location %> </li>
+          <li class="list-group-item">Submitted by <%= campground.author.username %></li>
           <li class="list-group-item">$<%= campground.price %>/night </li>
         </ul>
-        
+        <% if (currentUser && campground.author.equals(currentUser._id)) { %> 
         <div class="card-body">
           <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
           <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
             <button class="btn btn-danger">Delete Campground</button></form>
         </div>
+        <% } %> 
       </div>
         <div class="card-footer text-muted">
           2 days ago <a href="/campgrounds">All Campgrounds</a>
