--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate') %>
-
+<link rel="stylesheet" href="/stylesheets/stars.css">
 
 <div class="row">
     <div class="col-6 mb-3">
@@ -47,7 +47,7 @@
         <% for (let review of campground.reviews) { %>
           <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title">Rating: <%= review.rating %></h5>
+              <h5 class="card-title starability-result" data-rating="<%= review.rating %>" >Rated: <%= review.rating %> stars</h5>
               <h6 class="card-subtitle mb-2 text-muted">by <%= review.author.username %></h6>
               <p class="card-text">Review: <%= review.body %></p>
               <% if (currentUser && review.author.equals(currentUser._id)) { %> 
