--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,20 +3,18 @@
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" novalidate class="validatedForm">
+        <form action="/campgrounds" method="POST" novalidate class="validatedForm" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" name="campground[title]" id="title" required />
                 <div class="valid-feedback">Looks good!</div>
-                
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
                 <input class="form-control" type="text" name="campground[location]" id="location" required />
                 <div class="valid-feedback">Looks good!</div>
-
-                
             </div>
+            <input type="file" name="image">
             <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
                 <input class="form-control" type="text" name="campground[image]" id="image" required />
