--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -14,10 +14,9 @@
                 <input class="form-control" type="text" name="campground[location]" id="location" required />
                 <div class="valid-feedback">Looks good!</div>
             </div>
-            <input type="file" name="image">
             <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
-                <input class="form-control" type="text" name="campground[image]" id="image" required />
+                <input type="file" id="image" name="image" multiple>
                 <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
