--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
 <div class="row">
     <h1 class="text-center">Edit Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validatedForm">
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validatedForm" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input required class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %>" />
@@ -17,10 +17,8 @@
                 
             </div>
             <div class="mb-3">
-                <label class="form-label" for="image">Image URL</label>
-                <input required class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %>" />
-                <div class="valid-feedback">Looks good!</div>
-                
+                <label class="form-label" for="image">Add Images</label>
+                <input type="file" name="image" id="image" multiple>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
