--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,7 +7,11 @@
     <div class="card mb-3">
         <div class="row">
             <div class="col-md-4">
+                <% if (campground.images.length) { %> 
                 <img src="<%= campground.images[0].url %>" class="img-fluid" alt="">
+                <% } else { %>
+                    <img src="https://res.cloudinary.com/dq6kbbbza/image/upload/v1617802768/YelpCamp/u6jqvdhqi58ipkdxns7m.jpg" class="img-fluid" alt="">
+                    <% } %> 
             </div>
             <div class="col-md-8">
                 <div class="card-body">
