--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -34,5 +34,6 @@
 <% } %>
 <script>
     const mapToken = '<%= process.env.MAPBOX_TOKEN %>';
+    const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
 </script>
 <script src="/js/clusterMap.js"></script>
