--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -8,7 +8,6 @@
 
 <div class="row">
       <div class="col-6 mb-3">
-        <div id='map' style='width: 400px; height: 300px;'></div>
         <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <% campground.images.forEach((img, i) => { %> 
@@ -49,7 +48,9 @@
           2 days ago <a href="/campgrounds">All Campgrounds</a>
         </div>
       </div>
+      </div>
       <div class="col-6">
+        <div id='map'></div>
         <% if(currentUser) { %> 
           <h2>Leave a review</h2>
           <form class="validatedForm mb-3 " action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3" novalidate>
@@ -97,6 +98,5 @@
           </div>
         <% } %> 
       </div>
-</div>
 
 <script src="/js/showPageMap.js"></script>
